--- a/about.html
+++ b/about.html
@@ -119,8 +119,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="quarto-title-meta">
   </div>
 </header><main class="content" id="quarto-document-content">
-<p>About this blog</p>
-<p>Hello.</p>
+<p>Joseph Maier is a sophomore Sports Media and Communications Major at the University of Nebraska-Lincoln. He is a Video Content Production Intern at Hudl and the Assistant Sports Editor at the Daily Nebraskan.</p>
 
 
 </main> 
