--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="football">football <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div><div class="category" data-category="nfl">nfl <span class="quarto-category-count">(1)</span></div><div class="category" data-category="runningbacks">runningbacks <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="draft">draft <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div><div class="category" data-category="nfl">nfl <span class="quarto-category-count">(1)</span></div><div class="category" data-category="runningbacks">runningbacks <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -247,7 +247,7 @@ Tristan O’Malley
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="nfl,runningbacks,football" data-listing-date-sort="1650085200000" data-listing-file-modified-sort="1681702304658" data-listing-reading-time-sort="0.035">
+<div class="quarto-post image-right" data-index="2" data-categories="nfl,runningbacks,draft" data-listing-date-sort="1650085200000" data-listing-file-modified-sort="1681703964452" data-listing-reading-time-sort="1.35">
 <div class="thumbnail">
 <p><a href="./posts/first-round-running-backs/index.html"> <img src="./posts/first-round-running-backs/image.png" class="thumnail-image"> </a></p>
 </div>
@@ -267,13 +267,13 @@ nfl
 <div class="listing-category" onclick="window.quartoListingCategory('runningbacks'); return false;">
 runningbacks
 </div>
-<div class="listing-category" onclick="window.quartoListingCategory('football'); return false;">
-football
+<div class="listing-category" onclick="window.quartoListingCategory('draft'); return false;">
+draft
 </div>
 </div>
 <a href="./posts/first-round-running-backs/index.html">
 <div class="listing-description">
-Hi this is a test post hahah
+With the nfl draft just weeks away, it’s officially mock draft season. There seems…
 </div>
 </a>
 </div>
