--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ Tristan O’Malley
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="nfl,runningbacks,draft" data-listing-date-sort="1650085200000" data-listing-file-modified-sort="1681706487789" data-listing-reading-time-sort="5.235">
+<div class="quarto-post image-right" data-index="2" data-categories="nfl,runningbacks,draft" data-listing-date-sort="1650085200000" data-listing-file-modified-sort="1681707996671" data-listing-reading-time-sort="6.46">
 <div class="thumbnail">
 <p><a href="./posts/first-round-running-backs/index.html"> <img src="./posts/first-round-running-backs/image.png" class="thumnail-image"> </a></p>
 </div>
@@ -273,7 +273,7 @@ draft
 </div>
 <a href="./posts/first-round-running-backs/index.html">
 <div class="listing-description">
-With the nfl draft just weeks away, it’s officially mock draft season. There seems…
+With the…
 </div>
 </a>
 </div>
