--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="draft">draft <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div><div class="category" data-category="nfl">nfl <span class="quarto-category-count">(1)</span></div><div class="category" data-category="runningbacks">runningbacks <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -171,48 +171,7 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="news,code,analysis" data-listing-date-sort="1679288400000" data-listing-file-modified-sort="1681702032653" data-listing-reading-time-sort="0.045">
-<div class="thumbnail">
-<p><a href="./posts/post-with-code/index.html"> <img src="./posts/post-with-code/image.jpg" class="thumnail-image"> </a></p>
-</div>
-<div class="body">
-<a href="./posts/post-with-code/index.html">
-<h3 class="no-anchor listing-title">
-Post With Code
-</h3>
-<div class="listing-subtitle">
-
-</div>
-</a>
-<div class="listing-categories">
-<div class="listing-category" onclick="window.quartoListingCategory('news'); return false;">
-news
-</div>
-<div class="listing-category" onclick="window.quartoListingCategory('code'); return false;">
-code
-</div>
-<div class="listing-category" onclick="window.quartoListingCategory('analysis'); return false;">
-analysis
-</div>
-</div>
-<a href="./posts/post-with-code/index.html">
-<div class="listing-description">
-This is a post with executable code.
-</div>
-</a>
-</div>
-<div class="metadata">
-<a href="./posts/post-with-code/index.html">
-<div class="listing-date">
-Mar 20, 2023
-</div>
-<div class="listing-author">
-Harlow Malloc
-</div>
-</a>
-</div>
-</div>
-<div class="quarto-post image-right" data-index="1" data-categories="news" data-listing-date-sort="1679029200000" data-listing-file-modified-sort="1679338713730" data-listing-reading-time-sort="0.16">
+<div class="quarto-post image-right" data-index="0" data-categories="news" data-listing-date-sort="1679029200000" data-listing-file-modified-sort="1679338713730" data-listing-reading-time-sort="0.16">
 <div class="thumbnail">
 <p><a href="./posts/welcome/index.html"> <img src="./posts/welcome/thumbnail.jpg" class="thumnail-image"> </a></p>
 </div>
@@ -243,47 +202,6 @@ Mar 17, 2023
 </div>
 <div class="listing-author">
 Tristan O’Malley
-</div>
-</a>
-</div>
-</div>
-<div class="quarto-post image-right" data-index="2" data-categories="nfl,runningbacks,draft" data-listing-date-sort="1650085200000" data-listing-file-modified-sort="1681707996671" data-listing-reading-time-sort="6.46">
-<div class="thumbnail">
-<p><a href="./posts/first-round-running-backs/index.html"> <img src="./posts/first-round-running-backs/image.png" class="thumnail-image"> </a></p>
-</div>
-<div class="body">
-<a href="./posts/first-round-running-backs/index.html">
-<h3 class="no-anchor listing-title">
-Are first round running backs worth the price?
-</h3>
-<div class="listing-subtitle">
-
-</div>
-</a>
-<div class="listing-categories">
-<div class="listing-category" onclick="window.quartoListingCategory('nfl'); return false;">
-nfl
-</div>
-<div class="listing-category" onclick="window.quartoListingCategory('runningbacks'); return false;">
-runningbacks
-</div>
-<div class="listing-category" onclick="window.quartoListingCategory('draft'); return false;">
-draft
-</div>
-</div>
-<a href="./posts/first-round-running-backs/index.html">
-<div class="listing-description">
-With the…
-</div>
-</a>
-</div>
-<div class="metadata">
-<a href="./posts/first-round-running-backs/index.html">
-<div class="listing-date">
-Apr 16, 2022
-</div>
-<div class="listing-author">
-Joseph Maier
 </div>
 </a>
 </div>
