Chargers Post First Attempt
Rough draft of Chargers post

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="draft">draft <span class="quarto-category-count">(1)</span></div><div class="category" data-category="nfl">nfl <span class="quarto-category-count">(1)</span></div><div class="category" data-category="runningbacks">runningbacks <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div><div class="category" data-category="chargers">chargers <span class="quarto-category-count">(1)</span></div><div class="category" data-category="draft">draft <span class="quarto-category-count">(1)</span></div><div class="category" data-category="nfl">nfl <span class="quarto-category-count">(2)</span></div><div class="category" data-category="nflhistory">nflhistory <span class="quarto-category-count">(1)</span></div><div class="category" data-category="runningbacks">runningbacks <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -171,7 +171,48 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="nfl,runningbacks,draft" data-listing-date-sort="1650085200000" data-listing-file-modified-sort="1681715991747" data-listing-reading-time-sort="8.355">
+<div class="quarto-post image-right" data-index="0" data-categories="nfl,chargers,nflhistory" data-listing-date-sort="1654491600000" data-listing-file-modified-sort="1683398286898" data-listing-reading-time-sort="4.265">
+<div class="thumbnail">
+<p><a href="./posts/chargers-2010-failure/index.html"> <img src="./posts/chargers-2010-failure/chart.jpg" class="thumnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/chargers-2010-failure/index.html">
+<h3 class="no-anchor listing-title">
+The 2010 San Deigo Chargers
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('nfl'); return false;">
+nfl
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('chargers'); return false;">
+chargers
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('nflhistory'); return false;">
+nflhistory
+</div>
+</div>
+<a href="./posts/chargers-2010-failure/index.html">
+<div class="listing-description">
+Chargers fans have grown accustomed to heart wrenching losses over the last 20 years. Their 2023 27-0 playoff choke against the Jaguars is just the latest in a long line of…
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/chargers-2010-failure/index.html">
+<div class="listing-date">
+Jun 6, 2022
+</div>
+<div class="listing-author">
+Joseph Maier
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="nfl,runningbacks,draft" data-listing-date-sort="1650085200000" data-listing-file-modified-sort="1683397075970" data-listing-reading-time-sort="8.355">
 <div class="thumbnail">
 <p><a href="./posts/first-round-running-backs/index.html"> <img src="./posts/first-round-running-backs/chart.jpg" class="thumnail-image"> </a></p>
 </div>
