removing unnessessary code
Removed a chunk of code I don't need

--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="nfl,chargers,nflhistory" data-listing-date-sort="1654491600000" data-listing-file-modified-sort="1683398286898" data-listing-reading-time-sort="4.265">
+<div class="quarto-post image-right" data-index="0" data-categories="nfl,chargers,nflhistory" data-listing-date-sort="1654491600000" data-listing-file-modified-sort="1683476937434" data-listing-reading-time-sort="6.095">
 <div class="thumbnail">
 <p><a href="./posts/chargers-2010-failure/index.html"> <img src="./posts/chargers-2010-failure/chart.jpg" class="thumnail-image"> </a></p>
 </div>
 <div class="body">
 <a href="./posts/chargers-2010-failure/index.html">
 <h3 class="no-anchor listing-title">
-The 2010 San Deigo Chargers
+The mind-boggling failure of the 2010 San Deigo Chargers
 </h3>
 <div class="listing-subtitle">
 
